<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#0299D2"
        android:padding="8dp"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/baseline_logout_24"
        android:contentDescription="@string/logout"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_item_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">
            <include layout="@layout/shimmer_item_post" />
            <include layout="@layout/shimmer_item_post" />
            <include layout="@layout/shimmer_item_post" />
            <include layout="@layout/shimmer_item_post" />
            <include layout="@layout/shimmer_item_post" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:paddingBottom="56dp"
        tools:listitem="@layout/item_post" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/add_post"
        app:backgroundTint="#0299D2"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white"
        android:src="@drawable/ic_add"
        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>