<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/time"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:layout_toEndOf="@+id/card"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:background="#ddd"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:background="@color/bgColorSecondary"
        android:layout_marginVertical="16dp"
        android:elevation="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="#ddd"
                android:contentDescription="@string/options"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/post1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:background="#ddd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/post2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="42dp"
                android:background="#ddd"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post1" />
            
            <TextView
                android:id="@+id/date"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="#ddd"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post2" />

            <ImageButton
                android:id="@+id/btn_like"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:background="#ddd"
                android:contentDescription="@string/like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/like_count"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="#ddd"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_like"
                app:layout_constraintStart_toEndOf="@+id/btn_like"
                app:layout_constraintTop_toTopOf="@id/btn_like" />

            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:background="#ddd"
                android:contentDescription="@string/comment"
                app:layout_constraintBottom_toBottomOf="@+id/like_count"
                app:layout_constraintStart_toEndOf="@id/like_count"
                app:layout_constraintTop_toTopOf="@+id/like_count" />

            <TextView
                android:id="@+id/comment_count"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="#ddd"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_comment"
                app:layout_constraintStart_toEndOf="@+id/btn_comment"
                app:layout_constraintTop_toTopOf="@id/btn_comment" />


            <ImageButton
                android:id="@+id/btn_bookmark"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:background="#ddd"
                android:contentDescription="@string/bookmark"
                app:layout_constraintBottom_toBottomOf="@+id/like_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/like_count" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>